<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.AddArtBookFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_icon" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/select_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/space_8"
        android:scaleType="fitCenter"
        android:src="@drawable/select_image"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/add_fragment_toolbar" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_24"
        android:background="@drawable/rectangle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_image" />

    <EditText
        android:id="@+id/art_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_32"
        android:hint="@string/art_title"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/art_book_caption"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <EditText
        android:id="@+id/art_book_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_32"
        android:hint="@string/art_caption"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/art_paint_type"
        app:layout_constraintTop_toBottomOf="@+id/art_book_title" />

    <EditText
        android:id="@+id/art_paint_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_32"
        android:hint="@string/paintType"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/art_book_caption" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_32"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>